--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* 
 /* Main parent grid on the website */
 .body{
     background: blue;
@@ -54,4 +55,4 @@
     align-self: center;
     color: white;
     justify-items: start;
-}
+} */
