--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* Main parent grid on the website */
+body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .container{
     background: #f7f7f7;
 }
