--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 @media only screen and (max-width:1000px){
     /* Hidden content */
+    .textToOverlay h1{
+        visibility: hidden;
+    }
+    .textToOverlay p {
+        visibility: hidden;
+    }
     .textToOverlay {
-        visibility: hidden !important;
-        width: 0%;
+        visibility: hidden;
+        text-indent: -1000em;
     }
     
     /* Parent grid of the image overlay */
@@ -54,6 +60,7 @@
         grid-column-end: 7;
         align-self: center;
         background: transparent;
+        border: none;
     }
     button.dropbtn{
         background: white;
@@ -88,49 +95,50 @@
     .dropdown:hover .dropdown-content {display: block;}
 
     /* Change the background color of the dropdown button when the dropdown content is shown */
-    .dropdown:hover .dropbtn {background-color: #f7f7f7;}
+    .dropdown:hover .dropbtn {background-color: #f7f7f7;
+    border:none;}
 
     .cowImg{
         z-index: 0;
+      
     }
 
     /* Style for info cards */
     .infoCard {
-        grid-area: 2 / 1 / 2 / 2;
+        grid-area: 3 / 1 / 3 / 2;
         position: relative; 
         background: white;
+        bottom: 100%;
         height: 33%;
-        width: 100%;
+        width: 80%;
+        padding-top: 7%;
         text-align: center;
-        padding-bottom: 12%;
-        justify-self: start;
+        justify-self: center;
+        
     }
 
     .infoCard1 {
-        grid-area: 2 / 1 / 2 / 2;
+        grid-area: 3 / 1 / 3 / 2;
         position: relative; 
         background: white;
-        bottom: 30%;
+        bottom: 55%;
         height: 33%;
         width: 80%;
         text-align: center;
-        padding: 6% 7%;
-        padding-bottom: 12%;
-        justify-self: start;
-        left: 20%;
+        justify-self: center;
+        padding-top: 7%;
     }
 
     .infoCard2 {
-        grid-area: 2 / 1 / 4 / 2;
+        grid-area: 3 / 1 / 3 / 2;
         position: relative; 
         background: white;
-        bottom: 20%;
+        bottom: 10%;
         height: 33%;
         width: 80%;
         text-align: center;
-        padding: 6% 7%;
-        padding-bottom: 12%;
-        justify-self: end;
+        justify-self: center;
+        padding-top: 7%;
     }
     .infoCards h3 {
         color: #CB904F;
@@ -159,7 +167,7 @@
     .intro{
         background: #0C2946;
         grid-area: 2 / 1 / 4 / 1;
-        height: 70%;
+        height: 110%;
         bottom: 38%;
         z-index: -10;
         position: relative;
@@ -170,12 +178,13 @@
     /* Class to move the text */
     .textIntro {
         width: 100%;
-        grid-area: 2 / 2 / 2 / 5;
+        grid-area: 2 / 2 / 2 / 6;
         text-align: center;
         justify-self: center;
         color: #ffffff; 
-        font-size: 24px;
-        bottom: 10%;
+        font-size: 24px;  
+        margin-top: 10%;
+        margin-bottom: 5%;
     }
 
     .textIntro h2 {
@@ -275,6 +284,8 @@
         display: inline;
         color: grey !important;
     }
+
+
 }
 @media only screen and (min-width: 1650px){
 
