--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 
-@media only screen and (max-width:1000px){
+@media only screen and (max-width:1100px){
     /* Hidden content */
     .textToOverlay h1{
         visibility: hidden;
@@ -121,6 +121,9 @@
         text-align: center;
         justify-self: center;
         z-index: 50;
+        font-size: 24px;
+        padding-left: 2%;
+        padding-right: 2%;
     }
 
     .infoCard1 {
@@ -134,6 +137,9 @@
         text-align: center;
         justify-self: center;
         padding-top: 7%;
+        font-size: 24px;
+        padding-left: 2%;
+        padding-right: 2%;
     }
 
     .infoCard2 {
@@ -147,6 +153,9 @@
         text-align: center;
         justify-self: center;
         padding-top: 7%;
+        font-size: 24px;
+        padding-left: 2%;
+        padding-right: 2%;
     }
     .infoCards h3 {
         color: #CB904F;
@@ -663,7 +672,7 @@
 }
 
 /* Change back to 900 when mobile comes in */
-@media only screen and (min-width: 1000px) and (max-width:1649px){
+@media only screen and (min-width: 1100px) and (max-width:1649px){
     /* Main parent grid on the website */
     /* Things to be hidden from normal display (everything but mobile/tablet) */
 .dropbtn{
@@ -871,32 +880,32 @@ p {
 }
 
 .textImgSide {
-    grid-area:  1 / 2 / 1 / 3;
+    grid-area:  1 / 2 / 1 / 4;
     position: relative; 
-    justify-self: start;
 }
 
 .textButton { 
-    grid-area: 1 / 3 / 1 / 7;
+    grid-area: 1 / 4 / 1 / 7;
     justify-self: center;
     position: relative;
-    margin-top: 2%;
     width: 60%;
+    right: 10%;
+    align-self: start;
 }
 
 .textImgSide2 {
-    grid-area: 3 / 3 / 3 / 7;
+    grid-area: 3 / 4 / 3 / 7;
     position: relative; 
-    display: inline;
-    bottom: 75%;
+    justify-self: center;
+    align-self: start;
+    bottom: 100%;
+    right: 10%;
 }
 
 .textButton2 { 
-    grid-area:  3 / 2 / 3 / 3;
-    align-self: start;
+    grid-area:  3 / 2 / 3 / 4;
     position: relative;
-    display: inline;
-    bottom: 75%;
+    bottom: 100%;
     width: 60%;
 }
 
