--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+#navBar{
+    display: grid;
+    grid-template: repeat(6,1fr)/repeat(6,1fr);
+}
+
+#title{
+    display: inline;
+    grid-area: 1 / 2 / 1 / 5;
+    font-size: 16px;
+}
+
+#navItems{
+    grid-area: 1/6/1/7;
+    display:inline;
+    margin-top: 10px;
+}
+
 #burgerIcon {
     display: inline-block;
     cursor: pointer;
@@ -14,3 +31,4 @@
 #navMenu{
     visibility: hidden;
 }
+
