--- a/style.css
+++ b/style.css
@@ -20,7 +20,12 @@
     cursor: pointer;
 }
 
-.firstBurger, .secondBurger, .thirdBurger{
+.burgerClose{
+    display:inline-block;
+    cursor: pointer;
+}
+
+#firstBurger, #secondBurger, #thirdBurger{
     width: 35px;
     height: 5px;
     background: #333;
@@ -30,5 +35,37 @@
 
 #navMenu{
     visibility: hidden;
+    background: burlywood;
+}
+#home, #products ,#prices ,#delivery, #aboutUs{
+    display:block;
+    text-decoration: none;
+    color:black;
 }
 
+/* Rotate first bar */
+.changeB1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px);
+    width: 35px;
+    height: 5px;
+    background: #333;
+    margin: 6px 0;
+    transition: 0.4;
+  }
+  
+  /* Fade out the second bar */
+  .changeB2{
+    opacity: 0;
+  }
+  
+  /* Rotate last bar */
+  .changeB3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+    width: 35px;
+    height: 5px;
+    background: #333;
+    margin: 6px 0;
+    transition: 0.4;
+  }
