--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 
 #navBar{
     display: grid;
-    grid-template: repeat(6,1fr)/repeat(6,1fr);
+    grid-template: repeat(1,1fr)/repeat(6,1fr);
 }
 
 #title{
@@ -37,6 +37,8 @@ body{
     visibility: hidden;
     background: burlywood;
     max-width: 50%;
+    position:absolute;
+    z-index: 1;
 }
 #home, #products ,#prices ,#delivery, #aboutUs{
     display:block;
@@ -56,25 +58,31 @@ body{
     transition: 0.4;
   }
   
-  /* Fade out the second bar */
-  .changeB2{
-    opacity: 0;
-  }
+/* Fade out the second bar */
+.changeB2{
+opacity: 0;
+}
   
-  /* Rotate last bar */
-  .changeB3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-    transform: rotate(45deg) translate(-8px, -8px) ;
-    width: 35px;
-    height: 5px;
-    background: #333;
-    margin: 6px 0;
-    transition: 0.4;
-  }
+/* Rotate last bar */
+.changeB3 {
+-webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+transform: rotate(45deg) translate(-8px, -8px) ;
+width: 35px;
+height: 5px;
+background: #333;
+margin: 6px 0;
+transition: 0.4;
+}
 
 
 #main{
     display:grid;
     grid-template: repeat(6,1fr) / repeat(6,1fr);
+}
+
+.introduction{
+    grid-area: 1 / 1 / 1 / 7;
+    position: absolute;
+    z-index: -1;
 }
 
