--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    font-size: 28px;
-    width: 100%;
+    font-size: 28px;  
+    margin: 0;
 }
 
 #navBar{
@@ -66,27 +66,108 @@ opacity: 0;
   
 /* Rotate last bar */
 .changeB3 {
--webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-transform: rotate(45deg) translate(-8px, -8px) ;
-width: 35px;
-height: 5px;
-background: #333;
-margin: 6px 0;
-transition: 0.4;
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+    width: 35px;
+    height: 5px;
+    background: #333;
+    margin: 6px 0;
+    transition: 0.4;
 }
 
 
 #main{
     display:grid;
     grid-template: repeat(6,1fr) / repeat(6,1fr);
+    
 }
 
-.introduction{
+.cowImg{
     grid-area: 1 / 1 / 1 / 7;
-    position: absolute;
-    z-index: -1;
+    overflow: hidden;
+    background: #0C2946;
 }
 
 #cowImg{
     display: 100%;
+
 }
+
+#introduction{
+    grid-area: 2 / 1 / 2 / 7;
+    background: #0C2946;
+    margin-top: -7px;
+    display: grid;
+    grid-template: repeat(4,1fr) / repeat(6,1fr);
+    row-gap: 80px;
+    margin-bottom: -1950px;
+    padding-bottom: 100px;
+}
+
+#introText{
+    text-align: center;
+    color: white;
+    grid-area: 1 / 1 / 1 / 7;
+}
+
+.infoCard{
+    background: white;
+    width: 85%;
+    height: 100%;
+}
+
+.infoCard img{
+    margin-top: 2%;
+}
+
+.cardImgBg{
+    background: #F7F7F7;
+    border-radius: 50%;
+    height:100px;
+    width: 100px;
+    margin-left: 42%;
+    padding: 2%;
+    margin-top: 100px;
+}
+.underLine{
+    border-bottom: 3px solid black;
+    width: 3em;
+    margin-left: 45%;
+    margin-right: 10%;
+}
+
+
+.infoCard p{
+    font-size: 40px;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+#milk{
+    grid-area: 2 / 1 / 2 / 7;
+    justify-self: center;
+    text-align: center;
+    padding: 2%;
+}
+
+#honey{
+    grid-area: 3 / 1 / 3 / 7;
+    justify-self: center;
+    text-align: center;
+    padding: 2%;
+}
+
+#egg{
+    grid-area: 4 / 1 / 4 / 7;
+    justify-self: center;
+    text-align: center;
+    padding: 2%;
+    
+}
+
+#moreInfo{
+    grid-area: 5 / 1 / 7 / 7;
+    margin-top: 500px;
+    justify-self: center;
+}
+
