--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ body{
     cursor: pointer;
 }
 
-
-
 #firstBurger, #secondBurger, #thirdBurger{
     width: 35px;
     height: 5px;
@@ -108,6 +106,8 @@ opacity: 0;
     text-align: center;
     color: white;
     grid-area: 1 / 1 / 1 / 7;
+    margin-left: 4%;
+    margin-right: 4%;
 }
 
 .infoCard{
