--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body{
 
 #title{
     display: inline;
-    grid-area: 1 / 2 / 1 / 5;
+    grid-area: 1 / 1 / 1 / 5;
+    margin-right: 170px;
+    justify-self: center;
 }
 
 #navItems{
@@ -25,8 +27,8 @@ body{
 }
 
 #firstBurger, #secondBurger, #thirdBurger{
-    width: 35px;
-    height: 5px;
+    width: 50px;
+    height: 8px;
     background: #333;
     margin: 6px 0;
     transition: 0.4;
@@ -48,10 +50,10 @@ body{
 
 /* Rotate first bar */
 .changeB1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-8px, 8px);
+    -webkit-transform: rotate(-45deg) translate(-12px, 8px) ;
+    transform: rotate(-45deg) translate(-12px, 10px);
     width: 35px;
-    height: 5px;
+    height: 8px;
     background: #333;
     margin: 6px 0;
     transition: 0.4;
@@ -67,7 +69,7 @@ opacity: 0;
     -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
     transform: rotate(45deg) translate(-8px, -8px) ;
     width: 35px;
-    height: 5px;
+    height: 8px;
     background: #333;
     margin: 6px 0;
     transition: 0.4;
@@ -76,7 +78,7 @@ opacity: 0;
 
 #main{
     display:grid;
-    grid-template: repeat(6,1fr) / repeat(6,1fr);
+    grid-template: repeat(1,1fr) / repeat(6,1fr);
     
 }
 
@@ -92,14 +94,13 @@ opacity: 0;
 }
 
 #introduction{
-    grid-area: 2 / 1 / 2 / 7;
+    grid-area: 1 / 1 / 2 / 7;
     background: #0C2946;
-    margin-top: -7px;
     display: grid;
     grid-template: repeat(4,1fr) / repeat(6,1fr);
-    row-gap: 80px;
-    margin-bottom: -1950px;
-    padding-bottom: 100px;
+    row-gap: 100px;
+    margin-top: 760px;
+    padding-bottom: 60px;
 }
 
 #introText{
@@ -127,7 +128,6 @@ opacity: 0;
     width: 100px;
     margin-left: 42%;
     padding: 2%;
-    margin-top: 100px;
 }
 .underLine{
     border-bottom: 3px solid black;
@@ -148,6 +148,8 @@ opacity: 0;
     justify-self: center;
     text-align: center;
     padding: 2%;
+    padding-top: 4%;
+    margin-top: -60px;
 }
 
 #honey{
@@ -155,6 +157,8 @@ opacity: 0;
     justify-self: center;
     text-align: center;
     padding: 2%;
+    margin-top: -60px;
+    padding-top: 4%;
 }
 
 #egg{
@@ -162,12 +166,44 @@ opacity: 0;
     justify-self: center;
     text-align: center;
     padding: 2%;
-    
+    margin-top: -60px;
+    padding-top: 4%;
 }
 
-#moreInfo{
-    grid-area: 5 / 1 / 7 / 7;
-    margin-top: 500px;
+#moreInfo1{
+    grid-area: 2 / 1 / 2 / 7;
+    margin-top: 50px;
     justify-self: center;
+    margin-left: 6%;
+    margin-right: 6%;
+}
+
+#moreInfo2{
+    grid-area: 2 / 1 / 7 / 7;
+    margin-top: 60px;
+    justify-self: center;
+    margin-left: 6%;
+    margin-right: 6%;
+}
+
+#review{
+    text-align: center;
+    margin-top: 120px;
+    margin-left: 12%;
+    margin-right: 6%;
+}
+
+.footerC{
+    margin-top: 120px;
+    background: #0C2946;
+    color: white;
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 10px;
+}
+
+#socialIcons{
+    display:inline;
+    margin-right: 5px;
 }
 
