--- a/style.css
+++ b/style.css
@@ -260,11 +260,12 @@ opacity: 0;
 }
 
 .footerC{
+    font-size: 20px;
     margin-top: 120px;
     background: #0C2946;
     color: white;
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     padding-top: 10px;
     font-family: 'Playfair Display', serif;
 }
