--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body{
     display: inline;
     grid-area: 1 / 1 / 1 / 5;
     margin-right: 170px;
+    border: 1px solid blue;
+    width: 350px;
     font-size: 24px;
     justify-self: center;
     font-family: 'Playfair Display', serif;
