--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
     font-size: 26px;  
     margin: 0;
@@ -60,7 +61,6 @@ body{
     position:absolute;
     z-index: 1;
     background: #F7F7F7;
-   
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -282,4 +282,236 @@ opacity: 0;
 
 #footerTitle{
     color: #CC6929;
+}
+
+@media (min-width:1100px){
+    body{
+       
+        
+    }
+    #navBar{
+        display: grid;
+        grid-template: repeat(1,1fr)/repeat(6,1fr);
+        max-width: 1100px;
+        min-width: 1100px;
+        width: 1100px;
+        margin: 0 auto;
+    }
+    
+
+    #main{
+        max-width: 1100px;
+        width: 1100px;
+        min-width: 1100px;
+        margin: 0 auto;
+    }
+    
+    #title{
+        display: inline;
+        grid-area: 1 / 1 / 1 / 5;
+        width: 350px;
+        font-size: 16px;
+        justify-self: start;
+        font-family: 'Playfair Display', serif;
+        color: #CC6929;    }
+    
+    #burgerIcon{
+        visibility: hidden;
+        position: absolute;
+    }
+
+    #navMenu{
+        visibility: visible;
+        margin-top:20px;
+        z-index: 1;
+        background: none;
+        padding-top: 0px;
+        position: relative;
+        padding-bottom: 0px;
+        width: 400px;
+        text-align: end;
+    }
+    #home, #products ,#prices ,#delivery, #aboutUs{
+        display:inline;
+        background: none;
+        text-decoration: none;
+        color: #707070 !important;
+        margin: 0px ;
+        font-size: 16px;
+        margin-right:2px;
+    }
+
+    #main{
+        display:grid;
+        grid-template: repeat(6,1fr) / repeat(6,1fr);
+        
+    }
+    
+    .cowImg{
+        grid-area: 1 / 1 / 1 / 7;
+        overflow: hidden;
+        background: #0C2946;
+        z-index: 0;
+    }
+    
+    #introduction{
+        grid-area: 1 / 1 / 1 / 7;
+        background: none;
+        display: grid;
+        grid-template: repeat(4,1fr) / repeat(6,1fr);
+        row-gap: 100px;
+        margin-top: 0px;
+        padding-bottom: 60px;
+        z-index: 5;
+    }
+    
+    #introText{
+        text-align: center;
+        color: white;
+        grid-area: 1 / 1 / 1 / 7;
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    
+    .infoCard{
+        background: white;
+        width: 85%;
+        height: 100%;
+    }
+    
+    .infoCard h3{
+        color: #CC6929;
+        font-family: 'Playfair Display', serif;
+    }
+    
+    .infoCard p{
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    .infoCard img{
+        color: #CC6929;
+        margin-top: 2%;
+    }
+    
+    .cardImgBg{
+        background: #F7F7F7;
+        border-radius: 50%;
+        height:100px;
+        width: 100px;
+        margin-left: 42%;
+        padding: 2%;
+    }
+    .underLine{
+        border-bottom: 3px solid #CC6929;;
+        width: 3em;
+        margin-left: 45%;
+        margin-right: 10%;
+    }
+    
+    
+    .infoCard p{
+        font-size: 40px;
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    
+    #milk{
+        grid-area: 2 / 1 / 2 / 7;
+        justify-self: center;
+        text-align: center;
+        padding: 2%;
+        padding-top: 4%;
+        margin-top: -60px;
+    }
+    
+    #honey{
+        grid-area: 3 / 1 / 3 / 7;
+        justify-self: center;
+        text-align: center;
+        padding: 2%;
+        margin-top: -60px;
+        padding-top: 4%;
+    }
+    
+    #egg{
+        grid-area: 4 / 1 / 4 / 7;
+        justify-self: center;
+        text-align: center;
+        padding: 2%;
+        margin-top: -60px;
+        padding-top: 4%;
+    }
+    
+    #moreInfo1{
+        grid-area: 2 / 1 / 2 / 7;
+        margin-top: 50px;
+        justify-self: center;
+        margin-left: 6%;
+        margin-right: 6%;
+    }
+    
+    #moreInfo2{
+        grid-area: 2 / 1 / 7 / 7;
+        margin-top: 60px;
+        justify-self: center;
+        margin-left: 6%;
+        margin-right: 6%;
+    }
+    
+    #infoSection h2{
+        color: #CC6929;
+        font-family: 'Playfair Display', serif;
+    }
+    
+    #infoSection button{
+        color: white;
+        background: #CC6929;
+        border: none;
+        shadow: none;
+        cursor: pointer;
+        padding: 2%;
+        height: 70px;
+        width: 180px;
+        font-size: 20px;
+    }
+    
+    #infoSection p{
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    #review{
+        text-align: center;
+        margin-top: 120px;
+        margin-left: 12%;
+        margin-right: 6%;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    #review h2{
+        color: #CC6929;
+    }
+    
+    .nameReview{
+        color: #CC6929;
+    }
+    
+    .footerC{
+        font-size: 20px;
+        margin-top: 120px;
+        background: #0C2946;
+        color: white;
+        text-align: center;
+        padding-bottom: 30px;
+        padding-top: 10px;
+        font-family: 'Playfair Display', serif;
+    }
+    
+    #socialIcons{
+        display:inline;
+        margin-right: 5px;
+    }
+    
+    #footerTitle{
+        color: #CC6929;
+    }
 }
