--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ opacity: 0;
 
 #cowImg{
     display: 100%;
-
 }
 
 #introduction{
@@ -304,6 +303,8 @@ opacity: 0;
         width: 1100px;
         min-width: 1100px;
         margin: 0 auto;
+        display:grid;
+        grid-template: repeat(6,1fr) / repeat(6,1fr);
     }
     
     #title{
@@ -341,17 +342,36 @@ opacity: 0;
         margin-right:2px;
     }
 
-    #main{
-        display:grid;
-        grid-template: repeat(6,1fr) / repeat(6,1fr);
-        
-    }
-    
     .cowImg{
         grid-area: 1 / 1 / 1 / 7;
         overflow: hidden;
-        background: #0C2946;
+        background: transparent;
         z-index: 0;
+    }
+
+    #imgText{
+        color: white;
+        grid-area: 1 / 1 / 1 / 2;
+        z-index: 5;
+        width: 50%;
+        font-family: 'Source Sans Pro', 'sans-serif';
+        font-size: 18px;
+        margin-left: 70px;
+        margin-top: 17%;
+    }
+
+    #imgText{
+        font-family: 'Playfair Display', 'serif';
+    }
+
+    .bluebgg{
+        border:2px solid black;
+        height: 60%;
+        margin-top: 500px;
+        z-index: -40;
+        position: absolute;
+        width: 100%;
+        background:#0C2946;
     }
     
     #introduction{
@@ -360,7 +380,7 @@ opacity: 0;
         display: grid;
         grid-template: repeat(4,1fr) / repeat(6,1fr);
         row-gap: 100px;
-        margin-top: 0px;
+        margin-top: 650px;
         padding-bottom: 60px;
         z-index: 5;
     }
@@ -368,11 +388,17 @@ opacity: 0;
     #introText{
         text-align: center;
         color: white;
-        grid-area: 1 / 1 / 1 / 7;
+        grid-area: 1 / 2 / 2 / 6;
         margin-left: 4%;
         margin-right: 4%;
+        height: 1100px;
+        font-size: 18px;
     }
     
+    #introText p {
+        font-size: 18px;
+    }
+
     .infoCard{
         background: white;
         width: 85%;
@@ -386,6 +412,7 @@ opacity: 0;
     
     .infoCard p{
         font-family: 'Source Sans Pro', sans-serif;
+
     }
     
     .infoCard img{
