--- a/style.css
+++ b/style.css
@@ -373,8 +373,7 @@ opacity: 0;
     }
 
     .bluebgg{
-        border:2px solid black;
-        height: 60%;
+        height: 600px;
         margin-top: 500px;
         z-index: -40;
         position: absolute;
@@ -412,6 +411,8 @@ opacity: 0;
         background: white;
         width: 85%;
         height: 100%;
+        font-size: 18px;
+        text-align: center;
     }
     
     .infoCard h3{
@@ -427,39 +428,52 @@ opacity: 0;
     .infoCard img{
         color: #CC6929;
         margin-top: 2%;
+        
     }
     
     .cardImgBg{
         background: #F7F7F7;
         border-radius: 50%;
-        height:100px;
-        width: 100px;
-        margin-left: 42%;
+        height:60px;
+        width: 60px;
+        margin-left: 40%;
         padding: 2%;
     }
     .underLine{
         border-bottom: 3px solid #CC6929;;
         width: 3em;
-        margin-left: 45%;
+        margin-left: 43%;
         margin-right: 10%;
     }
     
     
     .infoCard p{
-        font-size: 40px;
-        padding-right: 20px;
-        padding-left: 20px;
+        font-size: 16px;
+        padding-right: 0px;
+        padding-left: 20%;
+        width: 60%;
     }
     
     #milk{
-        grid-area: 2 / 1 / 2 / 7;
-        justify-self: center;
+        grid-area: 1 / 1 / 1 / 3;
+        justify-self: start;
         text-align: center;
-        padding: 2%;
-        padding-top: 4%;
-        margin-top: -60px;
+        padding-top: 10%;
+        margin-top: 220px;
+        font-size: 18px;
+        height: 330px;
+        width: 400px;
+        padding-left: 5%;
+        padding-right: 5%;
     }
     
+    #milk p {
+        font-size: 14px;
+    }
+
+    #milk h3{
+        font-size: 16px;
+    }
     #honey{
         grid-area: 3 / 1 / 3 / 7;
         justify-self: center;
